# enlightenment-rage

./: .gitignore  configure.ac  configure.in
data/: Makefile.am  default.edc  menu_itemdp.edc  menu_itemdy.edc  menu_itemlb.edc  menu_itemly.edc  menuitems.edc  mini.edc  videopreview.edc
data/CVS/: Entries  Repository
m4/CVS/: Entries  Repository
src/CVS/: Entries  Repository
src/modules/activity/audio/: audio_menu.c  files.mak
src/modules/activity/config/: files.mak  menu_config.c
src/modules/activity/dvb/: dvb.c  dvb.h  files.mak
src/modules/activity/photo/: files.mak  photo_menu.c
src/modules/activity/videos/: dvd_menus.c  files.mak  video.c  video.h  video_input.c  video_input.h  video_menus.c
src/modules/input/: basekeymap.h  fallbackkeymap.h  files.mak  kbd.c  videokeymap.h
src/modules/vfs/database/: database.c  database.h  database_audio_vfs.c  database_photos_vfs.c  database_vfs.c  database_videos_vfs.c  files.mak
src/test/: Makefile  load.sql  test_dbcore.c  test_dbiterator.c
